<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name : <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="thank_you">Thank you!!</string>
</resources>
