<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>

        <TextView
            android:text="@string/toppings"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            style="@style/CustomText"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:text="Whipped Cream"
            android:paddingLeft="16dp"
            style="@style/CustomText"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate"
            android:paddingLeft="16dp"
            style="@style/CustomText"/>

        <TextView
            android:layout_marginBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            style="@style/CustomText"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/dec"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:onClick="dec" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="2"
                style="@style/CustomText" />

            <Button
                android:id="@+id/inc"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:onClick="inc"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_id"
            android:text="@string/order"
            android:onClick="submitOrder"
            style="@style/CustomText"/>

    </LinearLayout>
</ScrollView>